minor: fix track title z-index

--- a/src/assets/scss/modules/_track-item.scss
+++ b/src/assets/scss/modules/_track-item.scss
@@ -52,6 +52,7 @@
     color: $color-white;
     display: flex;
     align-items: center;
+    z-index: 2;
   }
 
   &__title {
